include_directories(.)


add_subdirectory(Chain_Of_Responsibility)
add_subdirectory(Command_Pattern)
add_subdirectory(Interpreter_Pattern)
add_subdirectory(Iterator_Pattern)
add_subdirectory(Mediator_Pattern)
add_subdirectory(Memento_Pattern)
add_subdirectory(Observer_Pattern)
add_subdirectory(State_Pattern)
add_subdirectory(Null_Object_Pattern)